# sourdough

./: .eslintrc.json  .gitignore  .justfile  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
app/: globals.css  layout.tsx  page.test.tsx  page.tsx  types.ts
app/components/: AppLayout.tsx  MessageInput.module.css  MessageInput.tsx  MessageLog.tsx  MessagePage.tsx
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/src/app/: __init__.py  config.py  main.py  store.py  store_postgres.py  store_supabase.py
apps/api/src/app/message_store/: store.py  store_postgres.py  store_supabase.py
apps/api/tests/: conftest.py  test_main.py
apps/web/: Dockerfile  package.json  tsconfig.tsbuildinfo
apps/web/app/: page.test.tsx
apps/web/app/admin/: admin.module.css  layout.tsx  page.tsx
apps/web/app/api/admin/clear-messages/: route.ts
apps/web/app/api/admin/login/: route.ts
apps/web/app/api/admin/session/: route.ts
apps/web/app/components/: AppLayout.module.css  AppLayout.tsx  MessageInput.module.css  MessageInput.tsx  MessageLog.module.css  MessageLog.tsx  MessagePage.tsx
